Sat Feb 15 22:34:40 2025 adamy

	* build-231

	* 4.8.33 merge (#94)

	* internal tools, externalized (#78)

		o mcedit
		o mddiff
		o mcview

	* upgrades/bugfixes

		o glib 2.54.3 (#102)
		o zlib-1.3.1 (#102)
		o mbedtls-3.6.2 (#100)
		o libssh2-1.11.1 (#95)
		o EXDEV on rename failure (#85)
		o x64 installer path (#79)

Wed Mar 20 20:30:50 2024 adamy

	* build-230

	* 4.8.31 merge (#70)

	* upgrades/bugfixes

		o mbedtls 3.5.2 (#67)
		o AltGr detection (#71, #52)
		o mcdiff integration (#74)
		o cd/cdpath (#72)

	* x64 binary (Beta)

Sun Nov 12 11:36:11 2023 adamy

	* build-229

	* 4.8.30 merge

	* package upgrades

		o libappupdater 1.0.2
		o pcre2 10.42
		o mbedtls 3.4.1
		o enca 1.19
		o file 5.45
		o zlib 1.2.13

Sun Sep 10 22:45:15 2023 adamy

	* build-228

	* 4.8.29 merge

Sun Jun 19 15:11:13 2022 adamy

	* build-227

Wed Jun  8 19:37:49 2022 adamy

	* 4.8.28 merge

	* mingw32 builds

Mon Mar 21 10:47:17 2022 adamy

	* build-226

	* #21 - FISH enabled

		o ssh - OpenSSH required (https://github.com/powershell/Win32-OpenSSH) or WinXRSH (below).
		o rsh - WinRXH (https://github.com/adamyg/winxsh).

Fri Mar 11 21:41:28 2022 adamy

	* build-225

	* #16 - Completion

		o Support unix and windows directory separator.
		o CDPATH delimiter.

Wed Mar  9 21:50:55 2022 adamy

	* Console alert mode (#17 - Console alert options, audible and/or visible indicator).

		o Configuration, under <Display Bits>

			- Visible indicators <Invisible, Flash window or Flash baseline> [default = Invisible].
			- Audible <on/off> [default = on].

				+-------------------- Display bits -------------------+
				| Input / display codepage:   [ UTF-8 ]               |
				|-----------------------------------------------------|
				|  Console alert mode          Other Options          |
				|  ( ) Invisible               [x] Full 8 bits input  |
				|  ( ) Flash window                                   |
				|  (*) Flash baseline                                 |