@@ -1,5 +1,5 @@
 #include <edidentifier.h>
-__CIDENT_RCSID(gr_w32_user_c,"$Id: w32_user.c,v 1.21 2025/02/16 12:04:05 cvsuser Exp $")
+__CIDENT_RCSID(gr_w32_user_c,"$Id: w32_user.c,v 1.22 2025/02/19 09:38:47 cvsuser Exp $")
 
 /* -*- mode: c; indent-width: 4; -*- */
 /*
@@ -340,13 +340,12 @@ static void
 initialise_user()
 {
     char login[WIN32_LOGIN_LEN], group[WIN32_GROUP_LEN];
-    char domain[1024 + 1];
 
     TOKEN_USER *tu = NULL;
     TOKEN_PRIMARY_GROUP *pg = NULL;
     HANDLE hToken = NULL;
 
-    login[0] = 0, group[0] = 0, domain[0] = 0;
+    login[0] = 0, group[0]  = 0;
 
     if (x_passwd.pw_uid >= 0) {
         return;
@@ -361,8 +360,13 @@ initialise_user()
     strncpy(x_passwd_gecos, "pcuser", sizeof(x_passwd_gecos) - 1);
     strncpy(x_group_name, "user", sizeof(x_group_name) - 1);
 
+#if defined(_MSC_VER)
+#pragma warning(disable:6255) // alloca() usage
+#endif
+
     // process identify
     if (OpenProcessToken(GetCurrentProcess(), TOKEN_QUERY, &hToken)) {
+        wchar_t wdomain[128];
         SID_NAME_USE user_type = {0};
         DWORD cbSize, cbSize2;
 
@@ -372,10 +376,11 @@ initialise_user()
                     NULL != (tu = alloca(sizeof(char) + (cbSize + 1)))) {
 
             if (GetTokenInformation(hToken, TokenUser, tu, cbSize, &cbSize2)) {
-                DWORD ulen = sizeof(login), dlen = sizeof(domain);
+                wchar_t wlogin[WIN32_LOGIN_LEN];
+                DWORD ulen = _countof(wlogin), dlen = _countof(wdomain);
 
-                if (! LookupAccountSidA(NULL, tu->User.Sid, login, &ulen, domain, &dlen, &user_type)) {
-                    login[0] = 0;
+                if (LookupAccountSidW(NULL, tu->User.Sid, wlogin, &ulen, wdomain, &dlen, &user_type)) {
+                    w32_wc2utf(wlogin, login, sizeof(login));
                 }
             }
         }
@@ -386,10 +391,11 @@ initialise_user()
                     NULL != (pg = alloca(sizeof(char) + (cbSize + 1)))) {
 
             if (GetTokenInformation(hToken, TokenPrimaryGroup, pg, cbSize, &cbSize2)) {
-                DWORD glen = sizeof(group), dlen = sizeof(domain);
+                wchar_t wgroup[WIN32_GROUP_LEN];
+                DWORD glen = _countof(wgroup), dlen = _countof(wdomain);
 
-                if (! LookupAccountSidA(NULL, pg->PrimaryGroup, group, &glen, NULL, &dlen, &user_type)) {
-                    group[0] = 0;
+                if (LookupAccountSidW(NULL, pg->PrimaryGroup, wgroup, &glen, wdomain, &dlen, &user_type)) {
+                    w32_wc2utf(wgroup, group, sizeof(group));
                 }
 
             } else {
@@ -405,6 +411,7 @@ initialise_user()
         char *sid = NULL;
 
         strncpy(x_passwd_name, login, sizeof(x_passwd_name)-1);
+        x_passwd_name[sizeof(x_passwd_name)-1] = 0;
 
         if (0 == _stricmp("Administrator", login)) {
             x_passwd.pw_uid = 500;              // Built-in admin account.
@@ -427,7 +434,8 @@ initialise_user()
         }
 
         if (ConvertSidToStringSidA(tu->User.Sid, &sid)) {
-            strncpy(x_passwd_gecos, sid, sizeof(x_passwd_gecos) - 1);
+            strncpy(x_passwd_gecos, sid, sizeof(x_passwd_gecos)-1);
+            x_passwd_gecos[sizeof(x_passwd_gecos)-1] = 0;
             LocalFree(sid);
         }
 
@@ -441,9 +449,10 @@ initialise_user()
             if (NULL == name) name = getenv("USER");
             if (NULL == name) name = getenv("USERNAME");
             if (NULL == name) name = "dosuser";
-            strncpy(x_passwd_name, name, sizeof(x_passwd_name) - 1);
+            strncpy(x_passwd_name, name, sizeof(x_passwd_name)-1);
         }
 
+        x_passwd_name[sizeof(x_passwd_name)-1] = 0;
         if (0 == _stricmp("Administrator", x_passwd_name)) {
             x_passwd.pw_uid = 0;
         }
